- Fix bug #30573 (compiler warning due to invalid type cast)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@180322 c90b9560-bf6c-de11-be94-00142212c4b1