ext/mbstring/libmbfl/mbfl/mbfl_convert.h
@@ -51,6 +51,7 @@ struct _mbfl_convert_filter {
 	const mbfl_encoding *to;
 	int illegal_mode;
 	int illegal_substchar;
+	void *opaque;
 };
 
 struct mbfl_convert_vtbl {
